--- a/styles/styles.css
+++ b/styles/styles.css
@@ -89,3 +89,69 @@ input[type="range"] {
     animation-duration: 0.5s;
     cursor: pointer;
 }
+
+.pianoDiv{
+    display: grid;
+    width: 100%;
+    height: 8rem;
+}
+
+.whiteKeysDiv{
+    grid-row: 1;
+    grid-column: 1;
+    display: flex;
+    flex-direction: row;
+    height: 100%;
+}
+
+.whiteKey{
+    z-index: 1;
+    height: 100%;
+    width: 100%;
+    border: none;
+    background-color: white;
+    margin-left: 0.1rem;
+}
+
+.whiteKey:hover{
+    cursor: pointer;
+}
+
+.blackKeysDiv{
+    grid-row: 1;
+    grid-column: 1;
+    display: flex;
+    flex-direction: row;
+    height: 70%;
+    width: 100%;
+}
+
+.blackKey{
+    z-index: 2;
+    height: 100%;
+    width: 10%;
+    border: none;
+    background-color: black;
+    padding: 0;
+}
+
+.blackKey:hover{
+    cursor: pointer;
+}
+
+.blackKey.mid{
+    margin-left: 4.2857142857%;
+    margin-right: 14.2857142857%;
+}
+
+.blackKey.left{
+    margin-left: 4.2857142857%;
+}
+
+.blackKey.leftmost{
+    margin-left: 9.2857142857%;
+}
+
+.whiteKey.left{
+    margin-left: 0;
+}
