--- a/styles/styles.css
+++ b/styles/styles.css
@@ -13,13 +13,17 @@ body{
     height: 100vh;
 }
 
-.main-center{
+.mainCenter{
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: space-evenly;
     width: 100%;
     height: 100%;
+}
+
+.mainCenter.playArea{
+    justify-content: flex-end;
 }
 
 .playButtonDiv{
@@ -94,6 +98,7 @@ input[type="range"] {
     display: grid;
     width: 100%;
     height: 8rem;
+    max-width: 15rem;
 }
 
 .whiteKeysDiv{
@@ -154,4 +159,25 @@ input[type="range"] {
 
 .whiteKey.left{
     margin-left: 0;
+}
+
+.audioControlsDiv{
+    flex-grow: 1;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+}
+
+.playAudioBtn{
+    background-image: url("/img/playAudioButton.svg");
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: 3.33rem;
+    background-color: transparent;
+    border: none;
+    height: 3.33rem;
+}
+
+.playAudioBtn:hover{
+    cursor: pointer;
 }
