--- a/styles/styles.css
+++ b/styles/styles.css
@@ -189,6 +189,7 @@ input[type="range"] {
     font-size: 1rem;
     background-color: transparent;
     border: none;
+    font-weight: bold;
 }
 
 .continueBtn:hover{
