--- a/styles/styles.css
+++ b/styles/styles.css
@@ -6,12 +6,14 @@ html{
     background-color: var(--primary-color);
     font-size: 40px;
     font-family: "League Spartan", sans-serif;
+    width: 100%;
+    height: 100%;
 }
 
 body{
     margin: 0;
-    width: 100vw;
-    height: 100vh;
+    width: 100%;
+    height: 100%;
 }
 
 .mainCenter{
