--- a/styles/styles.css
+++ b/styles/styles.css
@@ -37,6 +37,8 @@ body{
 
 .backgroundStaffLines{
     width: 100%;
+    min-height: 3.5rem;
+    max-height: 20vh;
 }
 
 .centerImageWrapper{
@@ -47,6 +49,7 @@ body{
     grid-row: 1;
     grid-column: 1;
     z-index: 0;
+    min-height: 3.5rem;
 }
 
 .startGameBtnWrapper{
@@ -61,11 +64,15 @@ body{
 .flyingNotesImg{
     width: 25%;
     min-width: 5rem;
+    min-height: 2.5rem;
+    max-height:20vh;
 }
 
 .logoImg{
     width: 40%;
     min-width: 10.625rem;
+    min-height: 6.11rem;
+    max-height: 36.8vh;
 }
 
 @keyframes growButton{
