--- a/styles/styles.css
+++ b/styles/styles.css
@@ -235,6 +235,7 @@ input[type="range"] {
     color: white;
     margin: 0;
     margin-bottom: 0.5rem;
+    text-align: center;
 }
 
 @media only screen and (max-width:511px) {
