--- a/styles/styles.css
+++ b/styles/styles.css
@@ -255,3 +255,15 @@ input[type="range"] {
         font-size: 30px;
     }
 }
+
+@media only screen and (max-width: 440px){
+    .playHtml{
+        font-size: 35px;
+    }
+}
+
+@media only screen and (max-width: 380px){
+    .playHtml{
+        font-size: 30px;
+    }
+}
